fixed overflow

--- a/lesson-7/src/style/style.css
+++ b/lesson-7/src/style/style.css
@@ -89,7 +89,6 @@ p {
     padding: 80px 0;
     max-width: 450px;
     float: left;
-    overflow: hidden;
 }
 
 .hero-section .image-holder {
